# computer-algebra-system

./: .gitignore  .gitmodules  .piska.py.swp  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  README.md  annotated.html  annotated.js  classInteger-members.html  classInteger.html  classInteger.js  classNatural-members.html  classNatural.html  classNatural.js  classPolynomial-members.html  classPolynomial.html  classPolynomial.js  classRational-members.html  classRational.html  classRational.js  dir_8012aacd30344bc9dac58bffdc5449c6.html  dir_c4a5c15d62d7e176e993cdd3af34dfb6.html  dir_c4a5c15d62d7e176e993cdd3af34dfb6.js  files.html  files_dup.js  globals.html  globals_func.html  index.html  integer_8hpp.html  integer_8hpp.js  integer_8hpp_source.html  natural_8hpp.html  natural_8hpp.js  natural_8hpp_source.html  navtreedata.js  navtreeindex0.js  piska.py  polynomial_8hpp.html  polynomial_8hpp.js  (+4 more)
.github/workflows/: doxygen-gh-pages.yml  release.yml
app/: CMakeLists.txt  button.cpp  common_mode.cpp  common_mode.hpp  lexer.cpp  lexer.hpp  parser.hpp  window.cpp  window.hpp
app/modes/: integer_mode.hpp  natural_mode.cpp  natural_mode.hpp  polynomial_mode.cpp  polynomial_mode.hpp  rational_mode.hpp
app/parsers/: CMakeLists.txt  integer_parser.cpp  polynomial_parser.cpp  polynomial_parser.hpp  rational_parser.cpp  rational_parser.hpp
apps/: CMakeLists.txt
apps/rzcas/: CMakeLists.txt  button.cpp  common_mode.cpp  common_mode.hpp  lexer.cpp  lexer.hpp  parser.hpp  window.cpp  window.hpp
apps/rzcas/modes/: CMakeLists.txt  (+5 more)
apps/rzdemo/: CMakeLists.txt  main.cpp
cas/: CMakeLists.txt  button.cpp  button.hpp  common_mode.cpp  common_mode.hpp  common_parser.hpp  main.cpp  modes.hpp  parser.cpp  window.cpp  window.hpp
cas/modes/: CMakeLists.txt  integer_mode.cpp  natural_mode.cpp  polynomial_mode.cpp  rational_mode.cpp
cas/parsers/: CMakeLists.txt  integer_parser.cpp  natural_parser.cpp
docs/: CMakeLists.txt  Doxyfile
docs/html/: annotated.html  classInteger-members.html  classInteger.html  classNatural-members.html  classNatural.html  classPolynomial-members.html  classPolynomial.html  classRational-members.html  classRational.html  classRational.js  dir_000000_000001.html  dir_8012aacd30344bc9dac58bffdc5449c6.html  dir_8012aacd30344bc9dac58bffdc5449c6_dep.map  dir_8012aacd30344bc9dac58bffdc5449c6_dep.md5  dir_c4a5c15d62d7e176e993cdd3af34dfb6.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  integer_8hpp.html  integer_8hpp.js  integer_8hpp__dep__incl.map  integer_8hpp__dep__incl.md5  integer_8hpp__incl.map  integer_8hpp__incl.md5  integer_8hpp_source.html  menudata.js  natural_8hpp.html  natural_8hpp__dep__incl.map  natural_8hpp__dep__incl.md5  natural_8hpp__incl.map  natural_8hpp__incl.md5  natural_8hpp_source.html  polynomial_8hpp.html  polynomial_8hpp__incl.map  polynomial_8hpp__incl.md5  polynomial_8hpp_source.html  rational_8hpp.html  rational_8hpp__incl.map  (+2 more)
docs/html/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  files_1.js  functions_0.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  related_2.js  related_3.js  searchdata.js  variables_1.js
include/: natural.hpp  polynomial.hpp  rational.hpp
include/rznumbers/: integer.hpp  natural.hpp  polynomial.hpp  rational.hpp
libcas/: CMakeLists.txt  integer.cpp  integer.hpp  natural.cpp  natural.hpp  polynomial.hpp  rational.cpp  rational.hpp
libcas-tst/: CMakeLists.txt  integer.cpp  natural.cpp  polynomial.cpp  rational.cpp
search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  related_0.js  related_1.js  related_2.js  related_3.js  related_4.js  searchdata.js  typedefs_0.js  variables_0.js
src/: CMakeLists.txt  integer.cpp  natural.cpp  polynomial.cpp  rational.cpp
tst/: CMakeLists.txt  integer.cpp  natural.cpp  polynomial.cpp  rational.cpp
(+7 files in other folders)
